...
                                    .background(Color(.primary))
                                    .foregroundColor(.white)
                                    .cornerRadius(14)
                                    .shadow(color: Color(.primary).opacity(0.3), radius: 15, x: 0, y: 8)
                            }
                            .padding(.horizontal, 30)
                            .accessibilityIdentifier("signInLink")
                        }
                        .padding(.bottom, 40)
                    }
                }
                .foregroundStyle(.white)
    }
...
